# gemini-update

./: .editorconfig  .env.example  .gitignore  Dockerfile  README.md  demo.py  docker-compose.yml  error.md  fix_validation_summary.md  gemini-update.code-workspace  gemini-update.py  gemini-update.sh  pyproject.toml  requirements.txt  setup.py  stack-trace  test_agent_integration.py  test_api_integration.py  test_tool_fix.py
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.github/: devguide.md
examples/: __init__.py  example_feature_spec.py  example_implementation_plan.py  gemini_files_example.py  github_integration.md  github_integration.py  test_plan.md
output/: create_github_issue_from_implementation_plan_plan.md  create_github_issue_from_implementation_plan_spec.md
prompts/: __init__.py  feature_prompt_template.py  feature_request.yaml
src/: __init__.py  config.py
src/agent/: __init__.py  agent.py  agents.py  common.py  gemini_files.py
src/cli/: __init__.py  main.py
src/models/: __init__.py  analysis.py  code_execution.py  completion_marker.py  feature.py  file_access.py  gemini.py
src/prompts/: __init__.py  codebase_analyzer_prompt.py  feature_spec_prompt.py  implementation_planner_prompt.py
src/tools/: __init__.py  code_execution_tools.py  code_execution_tools.py.bak  code_execution_tools_improved.py  codebase_tools.py  documentation_tools.py  feature_tools.py  (+1 more)
tests/: test_documentation_tools.py  test_documentation_tools_integration.py  test_feature_tools_gemini.py  test_file_access.py  test_models.py
(+1 files in other folders)
