[tool.poetry]
name = "gemini-update"
version = "0.1.0"
description = "A tool for codebase analysis and feature planning with Google Gemini AI"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
python = ">=3.13,<4.0"
packages = [{ include = "gemini_update", from = "src" }]
homepage = "https://github.com/yourusername/gemini-update"
repository = "https://github.com/yourusername/gemini-update"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
google-generativeai = ">=0.4.0"
pydantic = ">=2.0.0"
pydantic-ai = ">=0.2.0"
rich = ">=13.0.0"
python-dotenv = ">=1.0.0"
typer = ">=0.9.0"
typing-extensions = ">=4.8.0"
requests = ">=2.31.0"
aiohttp = ">=3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.23.0"

[tool.poetry.scripts]
gemini-update = "src.cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
